# Iceburn

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.jl  build.py  generate.py  gui.py  openings.json  problem_positions  topgn.py
.cargo/: config.toml
scripts/: timing.jl
src/: board.rs  engine.rs  eval.rs  fen.rs  main.rs  movegen.rs  moves.rs  nnue.rs  ordering.rs  perft.rs  search.rs  searcher.rs  time.rs  timeman.rs  tt.rs  utils.rs  weight.rs  zobrist.rs
src/chess/: mod.rs
src/search/: entry.rs  mod.rs  searcher.rs
