[package]
name = "iceburn"
version = "0.1.0"
authors = ["SnowballSH <derek070211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
serde_json = "1.0"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2
